revised for grad student audience

--- a/_quarto.yaml
+++ b/_quarto.yaml
@@ -6,8 +6,8 @@ title: |-
   Introducing
 
   Indiana Publishing: Grey Literature
-subtitle: <https://libraries.indiana.edu/publishing>
-date: "25 April 2024"
+subtitle: <https://libraries.indiana.edu/publishing-grey-literature>
+date: "2 May 2024"
 author: Adam Mazel, Digital Publishing Librarian
 institute: Scholarly Communication Department, IUB Libraries
 
